feat(lint): 🚨 adding lint config

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-  "conventionalCommits.scopes": ["app"],
+  "conventionalCommits.scopes": ["app", "lint"],
   "cSpell.words": ["fastify", "tsup"]
 }
