feat(db): 🗃️ adding database relations

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-  "conventionalCommits.scopes": ["app", "lint"],
+  "conventionalCommits.scopes": ["app", "lint", "db"],
   "cSpell.words": ["fastify", "tsup"],
   "[prisma]": {
     "editor.formatOnSave": true
