feat(routes): ✨ adding user register controller

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-  "conventionalCommits.scopes": ["app", "lint", "db"],
+  "conventionalCommits.scopes": ["app", "lint", "db", "routes"],
   "cSpell.words": ["fastify", "tsup"],
   "[prisma]": {
     "editor.formatOnSave": true
