--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20.14.8",
     "eslint": "^8.57.0",
+    "eslint-plugin-unused-imports": "^3.2.0",
     "prisma": "^5.15.1",
     "tsup": "^8.1.0",
     "tsx": "^4.15.7",
