--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
     "start": "node build/server.js",
     "build": "tsup src --out-dir build",
     "test": "vitest run",
-    "test:watch": "vitest"
+    "test:watch": "vitest",
+    "test:watch:coverage": "vitest --coverage",
+    "test:coverage": "vitest run --coverage"
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "^2.2.2",
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20.14.8",
+    "@vitest/coverage-v8": "^1.6.0",
+    "@vitest/ui": "^1.6.0",
     "eslint": "^8.57.0",
     "eslint-plugin-unused-imports": "^3.2.0",
     "prisma": "^5.15.1",
