chore(ci): 👷 adding test:ui command

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,7 +6,8 @@
     "routes",
     "controllers",
     "use-cases",
-    "repositories"
+    "repositories",
+    "ci"
   ],
   "cSpell.words": ["fastify", "tsup"],
   "[prisma]": {
