--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "start:dev": "tsx watch src/server.ts",
     "start": "node build/server.js",
     "build": "tsup src --out-dir build",
-    "test": "vitest run",
-    "test:watch": "vitest",
-    "test:watch:coverage": "vitest --coverage",
+    "test": "vitest run --dir src/use-cases",
+    "test:watch": "vitest --dir src/use-cases",
+    "test:e2e": "vitest run --dir src/http/controllers",
     "test:coverage": "vitest run --coverage",
+    "test:watch:coverage": "vitest --coverage",
     "test:ui": "vitest --ui"
   },
   "devDependencies": {
