test(controllers): ✅ adding register

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "build": "tsup src --out-dir build",
     "test": "vitest run --dir src/use-cases",
     "test:watch": "vitest --dir src/use-cases",
-    "test:e2e": "vitest run --dir src/http/controllers",
+    "test:e2e": "vitest run --dir src/http",
+    "test:watch:e2e": "vitest --dir src/http",
     "test:coverage": "vitest run --coverage",
     "test:watch:coverage": "vitest --coverage",
     "test:ui": "vitest --ui"
@@ -21,11 +22,13 @@
     "@rocketseat/eslint-config": "^2.2.2",
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20.14.8",
+    "@types/supertest": "^6.0.2",
     "@vitest/coverage-v8": "^1.6.0",
     "@vitest/ui": "^1.6.0",
     "eslint": "^8.57.0",
     "eslint-plugin-unused-imports": "^3.2.0",
     "prisma": "^5.15.1",
+    "supertest": "^7.0.0",
     "tsup": "^8.1.0",
     "tsx": "^4.15.7",
     "typescript": "^5.5.2",
